UHF-4442: Fixes language menu aria current, navigation items focus and adds id for sub navigation and targets it with aria controls

--- a/src/scss/06_components/navigation/_header-bottom-navigation.scss
+++ b/src/scss/06_components/navigation/_header-bottom-navigation.scss
@@ -130,7 +130,8 @@ $-main-nav-dropdown-padding: $-main-nav-spacing;
 
   // Handle menu link focus style when it has children
   .menu__item--item-below .menu__link:focus::after {
-    width: calc(100% - #{24px + 4px}); // Width of the dropdown button and padding.
+    left: -2px;
+    width: calc(100% - #{$spacing-and-half}); // Width of the dropdown button and padding.
   }
 
   // Active trail items, first level
