--- a/templates/navigation/links--language-block.html.twig
+++ b/templates/navigation/links--language-block.html.twig
@@ -53,7 +53,7 @@
         {% elseif lang == current_langcode %}
           {% set language_link = path('<current>', {}, {'language': item.link['#options']['language']}) %}
           {% set element = 'a' %}
-          {% set ariaCurrent = create_attribute({'aria-current': 'page'}) %}
+          {% set ariaCurrent = create_attribute({'aria-current': 'true'}) %}
         {% else %}
           {% set element = 'span' %}
           {% set classes = classes|merge(['is-disabled']) %}
