UHF-6046: merge from 4-rc

--- a/src/scss/06_components/block/_branding.scss
+++ b/src/scss/06_components/block/_branding.scss
@@ -5,20 +5,26 @@
   height: var(--branding-height);
   z-index: 1;
 
-  .site-name {
+  @include breakpoint($breakpoint-m) {
+    height: auto;
+  }
+
+  .city-name {
     color: $color-black;
+    display: none;
     margin-left: $spacing-half;
     margin-right: $spacing-half;
 
-    @include breakpoint($breakpoint-m) {
-      @include font('special.navigation.site_name');
+    @include breakpoint($breakpoint-l) {
+      @include font('special.navigation.city_name');
+      display: flex;
       margin-left: $spacing;
       margin-right: $spacing;
     }
   }
 
-  a:focus .site-name,
-  a:hover .site-name {
+  a:focus .city-name,
+  a:hover .city-name {
     text-decoration: underline;
   }
 }
