--- a/src/scss/06_components/navigation/global/_menu-toggle.scss
+++ b/src/scss/06_components/navigation/global/_menu-toggle.scss
@@ -28,9 +28,10 @@ $-menu-transition-duration: 0.3s;
   }
 }
 
-.mega-and-mobilemenu .block--language-switcher,
 .mega-and-mobilemenu .mobile-menu-fallback,
 .mega-and-mobilemenu .mmenu__footer {
+  padding-top: $spacing;
+
   @include breakpoint($breakpoint-l) {
     display: none;
   }
@@ -47,7 +48,6 @@ $-menu-transition-duration: 0.3s;
     display: grid;
   }
 
-  .mega-and-mobilemenu .block--language-switcher,
   .mega-and-mobilemenu .mobile-menu-fallback,
   .mega-and-mobilemenu .mmenu__footer {
     display: none;
@@ -218,6 +218,7 @@ $-menu-transition-duration: 0.3s;
     }
   }
 
+
   & ~ * .menu-toggle__open {
     visibility: hidden; // Menu text and hamburger icon are hidden
   }
@@ -241,10 +242,7 @@ $-menu-transition-duration: 0.3s;
   & ~ .wrapper > *:not(.header), // All wrapper content except .header
   & ~ .footer {
     @include breakpoint(max-width $breakpoint-l) {
-      // stylelint-disable-next-line max-nesting-depth
-      @supports not (overscroll-behavior-y: contain) {
-        display: none; // Hide other content when menu is visible and overscroll-behaviour is not supported
-      }
+      display: none; // Hide other content when menu is visible, to block tabbing behind menu
     }
   }
 }
