--- a/templates/block/block--external-menu-block-fallback.html.twig
+++ b/templates/block/block--external-menu-block-fallback.html.twig
@@ -54,7 +54,6 @@
         <h2 class="visually-hidden" id="menu-description">{{ 'Navigation menu'|t({}, {'context': 'Mobile navigation menu description for screen readers'}) }}</h2>
 
         <div class="mega-and-mobilemenu">
-          {{ drupal_entity('block', 'language_switcher')}}
 
           {# Render external mega menu block. #}
           {{ drupal_entity('block', 'external_menu_mega_menu', check_access=false) }}
@@ -65,7 +64,9 @@
           <div class="mmenu__footer js-mmenu__footer">
 
             {% set inside_cssmenu = true %}
-            {{ drupal_entity('block', 'external_header_top_navigation')}}
+            {% block header_top_navigation %}
+              {{ drupal_entity('block', 'external_header_top_navigation')}}
+            {% endblock header_top_navigation %}
 
             <div class="mmenu__logo">
               {% set link_label %}
