--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -58,29 +58,31 @@
           {% set block__branding_navigation = active_theme ~ '_brandingnavigation' %}
 
           {#
-            Render the header branding region blocks in a specific order.
+            Render the header branding region blocks in a specific order: mobile tabbing order
             Exclude the external menu mega menu block as it will be rendered
             manually in external fallback menu.
             See. block--external-menu-block-fallback.html.twig:61.
           #}
-          {{ drupal_entity('block', block__external_fallback_menu) }}
-          {{ drupal_entity('block', block__site_branding) }}
+
+          {{ drupal_entity('block', block__site_branding) }} {# Logo #}
+
+          {{ drupal_entity('block', block__branding_navigation) }} {# Branding menu, aka icon menu #}
+
+          {{ drupal_entity('block', block__external_fallback_menu) }} {# Mobile menu #}
 
           <div class="language-wrapper">
-            {{ drupal_entity('block', block__language_switcher) }}
+            {{ drupal_entity('block', block__language_switcher) }} {# Change language-menu and content in other languages-menu #}
             {{ drupal_entity('block', block__external_header_language_links) }}
           </div>
-
-          {{ drupal_entity('block', block__branding_navigation) }}
 
           {# Render the header branding region without manually rendered blocks #}
           {{ page.header_branding|without([
             block__site_branding,
+            block__branding_navigation,
             block__external_fallback_menu,
-            block__external_menu_mega_menu,
             block__language_switcher,
             block__external_header_language_links,
-            block__branding_navigation
+            block__external_menu_mega_menu
           ]) }}
         </div>
       {% endif %}
