--- a/templates/block/block--external-menu-block--header-language-links.html.twig
+++ b/templates/block/block--external-menu-block--header-language-links.html.twig
@@ -34,11 +34,10 @@
 
 {# Render navigation with content from another instance "globally" #}
 {% if use_global_navigation %}
-  {# Todo: Hide until the UHF-6046 is in progress #}
-  <!-- Header language links - menu block -->
-  {#  {% set block_content %}#}
-  {#    {% block content %}#}
-  {#      {{ content }}#}
-  {#    {% endblock %}#}
-  {#  {% endset %}#}
+  <nav role="navigation" {{ attributes|without('role', 'aria-labelledby').addClass('header-language-links') }}>
+    {# Menu. #}
+    {% block content %}
+      {{ content }}
+    {% endblock %}
+  </nav>
 {% endif %}
