UHF-4442: Fixed language switcher styles

--- a/src/scss/02_mixins/_link_mixins.scss
+++ b/src/scss/02_mixins/_link_mixins.scss
@@ -6,7 +6,8 @@
     text-decoration: underline;
   }
 
-  &[aria-current='page'] {
+  &[aria-current='page'],
+  &[aria-current='true'] {
     font-weight: $font-weight-bold;
   }
 }
