--- a/src/scss/06_components/navigation/_language-switcher.scss
+++ b/src/scss/06_components/navigation/_language-switcher.scss
@@ -9,7 +9,7 @@
     margin-left: 0;
   }
 
-  &[aria-current='page'] {
+  &[aria-current='true'] {
     border-bottom: 3px solid $color-black-90;
     cursor: default;
     text-decoration: none;
