UHF-X-4.0.0-rc: UHF-X: Fix instance name background on 404 and other grey backgrounds

--- a/src/scss/06_components/navigation/_header-bottom-navigation.scss
+++ b/src/scss/06_components/navigation/_header-bottom-navigation.scss
@@ -26,7 +26,7 @@ $-main-nav-dropdown-padding: $-main-nav-spacing;
 
   .site-name__container {
     display: none;
-    margin-top: $spacing-and-half;
+    padding-top: $spacing-and-half;
 
     @include breakpoint($breakpoint-l) {
       display: flex;
