--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -49,13 +49,15 @@
 
       {% if page.header_branding %}
         <div id="header-branding" class="header-branding">
+          {% set prefix = active_theme == 'hdbt_subtheme' ? 'hdbt_subtheme_' : '' %}
+
           {# Manually select which blocks to render in header branding region. #}
-          {% set block__site_branding = active_theme ~ '_sitebranding' %}
+          {% set block__site_branding = prefix ~ 'sitebranding' %}
           {% set block__external_fallback_menu = 'external_fallback_menu' %}
           {% set block__external_menu_mega_menu = 'external_menu_mega_menu' %}
-          {% set block__language_switcher = active_theme ~ '_language_switcher' %}
+          {% set block__language_switcher = prefix ~ 'language_switcher' %}
           {% set block__external_header_language_links = 'external_header_language_links' %}
-          {% set block__branding_navigation = active_theme ~ '_brandingnavigation' %}
+          {% set block__branding_navigation = prefix ~ 'brandingnavigation' %}
 
           {#
             Render the header branding region blocks in a specific order: mobile tabbing order
