--- a/src/scss/06_components/block/_language-switcher.scss
+++ b/src/scss/06_components/block/_language-switcher.scss
@@ -1,12 +1,19 @@
+$-language-block-height: 52px;
+
 .language-wrapper {
+  align-content: stretch;
+  align-items: center;
   align-self: center;
   background-color: $color-silver-light;
   border-bottom: 1px solid $color-black-20;
+  display: flex;
   grid-area: lang;
-  order: 3;
-  padding: 12px $spacing;
+  justify-content: space-between;
+  min-height:$-language-block-height;
+  padding: 0 $spacing;
   position: relative;
   transition: margin-top 0.3s ease 1s; // The transition delay here combats a bit for the accidental scroll ups during scrolling
+  width:100vw;
   // width: calc(100% + #{$spacing-double});
   z-index: 0;
 
@@ -18,6 +25,7 @@
     order: 2;
     padding: 0;
     width: auto;
+    z-index: 10; //floats over main menu dropdowns.
   }
 
   &.scroll-up {
@@ -31,6 +39,13 @@
   }
 }
 
+
+
+.block--language-switcher {
+
+}
+
+
 #menu:not([data-js]) ~ * .mega-and-mobilemenu .block--language-switcher + * {
   margin-top: $spacing;
 }
@@ -38,3 +53,4 @@
 .language-links {
   display: flex; // disables wrapping to multiple lines for now
 }
+
