--- a/src/scss/06_components/navigation/_branding-navigation.scss
+++ b/src/scss/06_components/navigation/_branding-navigation.scss
@@ -6,9 +6,9 @@ $-branding-icon-size-desktop: $spacing-double;
   background-color: $color-white;
   display: grid;
   grid-template-areas:
-    '. logo . . brand toggle .'
-    'lang lang lang lang otherlangs otherlangs .'
-    'menu menu menu menu menu menu menu';
+  '. logo . brand toggle .'
+  'lang lang lang lang lang lang'
+  'menu menu menu menu menu menu';
   grid-template-columns: var(--header-branding-padding) auto 1fr auto auto auto var(--header-branding-padding);
   grid-template-rows: var(--branding-height) auto auto;
   position: fixed;
@@ -20,8 +20,8 @@ $-branding-icon-size-desktop: $spacing-double;
     --branding-height: 86px;
     --header-branding-padding: #{$spacing-and-half};
     grid-template-areas:
-      '. logo . lang otherlangs brand toggle .'
-      'menu menu menu menu menu menu menu menu';
+      '. logo . lang brand toggle .'
+      'menu menu menu menu menu menu menu';
     grid-template-columns: var(--header-branding-padding) auto 1fr auto auto auto auto var(--header-branding-padding);
     grid-template-rows: var(--branding-height) auto;
   }
