--- a/src/scss/06_components/navigation/global/_megamenu.scss
+++ b/src/scss/06_components/navigation/global/_megamenu.scss
@@ -38,7 +38,7 @@
 }
 
 .megamenu__link[aria-current='page'] {
-  font-weight: bold;
+  font-weight: $font-weight-bold;
 }
 
 .megamenu__item--level-3 .megamenu__link[aria-current='page'] {
@@ -48,7 +48,7 @@
 
 .megamenu__link.megamenu__link--in-path,
 .megamenu__link.is-active {
-  font-weight: bold;
+  font-weight: $font-weight-bold;
 }
 
 .megamenu__item {
