--- a/src/scss/06_components/navigation/local/_mobile-navigation.scss
+++ b/src/scss/06_components/navigation/local/_mobile-navigation.scss
@@ -355,7 +355,7 @@ $-cssmenu-bottom-padding: 80px; // Reserve space for mobile browser untappable-a
 // Current page and in-path links
 .cssnav__link.cssnav__link--in-path, // higher specificity to combat level specific font styles
 .cssnav__link--in-path + details > summary > .cssnav__text-mirror {
-  font-weight: 700;
+  font-weight: $font-weight-bold;
 }
 
 .cssnav__toggle {
@@ -414,6 +414,6 @@ $-cssmenu-bottom-padding: 80px; // Reserve space for mobile browser untappable-a
   }
 
   & > .menu__link {
-    font-weight: bold; // Make the city link bolded like in design specs
+    font-weight: $font-weight-bold; // Make the city link bolded like in design specs
   }
 }
