UHF-6821: Megamenu instance font style fix to latest spec

--- a/src/scss/06_components/navigation/global/_megamenu.scss
+++ b/src/scss/06_components/navigation/global/_megamenu.scss
@@ -24,7 +24,7 @@
 }
 
 .megamenu__item--level-2 > .megamenu__link {
-  @include font('h5');
+  @include font('lead');
 }
 
 .megamenu__item--level-3 {
