--- a/src/scss/06_components/block/_header-language-links.scss
+++ b/src/scss/06_components/block/_header-language-links.scss
@@ -1,29 +1,14 @@
-
-/*copypasta*/
-
-$-mmenu-active-border: $spacing-quarter;
-$-mmenu-border-color: $color-black-20;
-$-transition-duration: 0.2s;
-$-back-icon-bg-size: 40px;
-$-back-icon-size: $spacing-double;
-
-
-/* new stuff*/
-$-panel-height:100vh;
-$-panel-desktop-width: 243px;
+$-panel-height:calc(100vh - 52px); // TODO this should be shared from the top of the stack
+$-panel-desktop-width: 243px; // from abstarct as a baseline
 
 .block__headerlanguagelinks {
   align-self: stretch;
   background-color: $color-silver-light;
   border-left: 1px solid $color-black-20;
   display:flex;
-  // background-color: $color-silver-light;
-  // border-bottom: 1px solid $color-black-20;
-  // order: 3;
   flex-grow:0;
   padding-left: $spacing;
   transition: margin-top 0.3s ease 1s; // The transition delay here combats a bit for the accidental scroll ups during scrolling
-  // width: calc(100% + #{$spacing-double});
   z-index: 0;
 
   @include breakpoint($breakpoint-m) {
@@ -31,39 +16,22 @@ $-panel-desktop-width: 243px;
     border:0;
     margin-left: auto;
     order: 2;
-    padding: 0 $spacing 0 $spacing-half;
+    padding: 0 $spacing-half;
     width: auto;
   }
-
-  // &.scroll-up {
-  //   margin-top: -52px;
-  //   transition-delay: 0s; // Transition delay should be 0 when hiding the switcher
-
-  //   @include breakpoint($breakpoint-m) {
-  //     margin-top: 0;
-  //     transition-duration: 0s;
-  //   }
-  // }
 }
-
 
 .headerlanguagelinks__toggle {
   align-items: center;
   display: flex;
   height:100%;
-
   text-decoration: none;
   &::before {
     @include pseudo-icon('globe', 24px, black);
     @include hover-link-arrow-transition;
     content:'';
     grid-area: icon;
-
-
-    // margin-top: 0.5 * ($-back-icon-bg-size - $-back-icon-size);
   }
-
-
 }
 
 .headerlanguagelinks__toggle span {
@@ -74,14 +42,11 @@ $-panel-desktop-width: 243px;
     grid-area: icon;
   }
 }
+
 .headerlanguagelinks__toggle--js {
   background-color: transparent ;
   border:0;
-
-
-
 }
-
 
 .headerlanguagelinks__toggle--open span {
   &::before {
@@ -95,18 +60,17 @@ $-panel-desktop-width: 243px;
   }
 }
 
-.headerlanguagelinks__wrapper {
+.headerlanguagelinks__menu-dropdown {
   background-color: $color-silver-medium-light;
   grid-area:menu;
   height:$-panel-height;
-  left:0;
   list-style: none;
   margin:0;
   max-height:$-panel-height;
   max-width:100vw;
   min-width:100vw;
-  overflow:hidden;
-  padding: $spacing-double $spacing;
+  overflow-x:hidden;
+  padding-block: $spacing;
   position: absolute;
   z-index:3;
 
@@ -114,19 +78,18 @@ $-panel-desktop-width: 243px;
     border: 1px solid $color-black-20;
     border-top:0;
     bottom:auto;
-    // grid-area:otherlangs;
+    grid-area:langmenu;
     height:auto;
+    justify-self: end;
     left:auto;
     max-width: $-panel-desktop-width;
     min-width:auto;
     position: absolute;
-    right:0;
-    top: 69px;
     width: $-panel-desktop-width;
   }
 }
 
-.headerlanguagelinks__wrapper,
+.headerlanguagelinks__menu-dropdown,
 .headerlanguagelinks__toggle--close {
   display:none;
 }
@@ -134,8 +97,6 @@ $-panel-desktop-width: 243px;
 #otherlangs {
   scroll-margin-top: 100vh;
 }
-
-
 
 /*hide button when JS is not available, hide links when it is*/
 #otherlangs[data-js] ~ * .headerlanguagelinks__toggle--js {
@@ -149,24 +110,16 @@ $-panel-desktop-width: 243px;
 
 #otherlangs:target,
 #otherlangs[data-target='true']  {
-  // TODO ensure this does not break anything else.
+
   & + .wrapper > .header {
     position:relative;
   }
 
-  & ~ * .headerlanguagelinks__wrapper {
+  & ~ * .headerlanguagelinks__menu-dropdown {
     display:block;
   }
 
-  // & ~ * .headerlanguagelinks__toggle--close {
-  //   display:flex;
-  // }
-
-  // & ~ * .headerlanguagelinks__toggle--open {
-  //   display:none;
-  // }
 }
-
 
 #otherlangs:target {
   & ~ * .headerlanguagelinks__toggle--close {
@@ -179,19 +132,16 @@ $-panel-desktop-width: 243px;
 }
 
 .headerlanguagelinks__group {
-margin-bottom: $spacing;
-
+  margin-bottom: $spacing;
 }
 
 .headerlanguagelinks__link {
   display:block;
   margin-bottom: $spacing-half;
   text-decoration: none;
-
   &:hover,  &:active {
     text-decoration: underline;
   }
-
 }
 
 .headerlanguagelinks__link--nolink {
