--- a/src/scss/06_components/navigation/_branding-navigation.scss
+++ b/src/scss/06_components/navigation/_branding-navigation.scss
@@ -1,4 +1,5 @@
 $-branding-icon-size-desktop: $spacing-double;
+$-panel-height:calc(100vh - 52px);
 
 .header-branding {
   --branding-height: 65px;
@@ -6,10 +7,10 @@ $-branding-icon-size-desktop: $spacing-double;
   background-color: $color-white;
   display: grid;
   grid-template-areas:
-  '. logo . brand toggle .'
-  'lang lang lang lang lang lang'
-  'menu menu menu menu menu menu';
-  grid-template-columns: var(--header-branding-padding) auto 1fr auto auto  var(--header-branding-padding);
+  '. logo . brand search toggle .'
+  'lang lang lang lang lang lang lang'
+  'menu menu menu menu menu menu menu';
+  grid-template-columns: var(--header-branding-padding) auto 1fr auto auto auto  var(--header-branding-padding);
   grid-template-rows: var(--branding-height) auto auto;
   position: fixed;
   top: 0;
@@ -20,14 +21,15 @@ $-branding-icon-size-desktop: $spacing-double;
     --branding-height: 86px;
     --header-branding-padding: #{$spacing-and-half};
     grid-template-areas:
-      '. logo . lang brand toggle .'
-      'menu menu menu menu menu menu menu';
+      '. logo . lang brand search toggle .'
+      'langmenu langmenu langmenu langmenu . . . .'
+      'menu menu menu menu menu menu menu menu';
     grid-template-columns: var(--header-branding-padding) auto 1fr auto auto auto auto var(--header-branding-padding);
     grid-template-rows: var(--branding-height) auto;
   }
 
   @include breakpoint($breakpoint-m) {
-    position: static;
+    position: relative;
     top: auto;
   }
 
@@ -102,5 +104,79 @@ $-branding-icon-size-desktop: $spacing-double;
       grid-area: icon;
       justify-self: center;
     }
+  }
+}
+
+.header-search__button-block {
+  align-items: center;
+  border:0;
+  display: flex;
+
+  grid-area: search;
+  padding: 0 $spacing 0 0;
+  z-index: 1;
+}
+.header-search__button  {
+  align-items: center;
+  background-color: transparent;
+  border:0;
+  display: flex;
+  height: 100%;
+
+}
+
+
+.header-search__button--open {
+  &::before {
+    @include pseudo-icon('search', 24px, black);
+  }
+}
+
+.header-search__button--close {
+  &::before {
+    @include pseudo-icon('cross', 24px, black);
+  }
+}
+
+
+.header-search__menu-dropdown {
+  background-color: white;
+  border:1px solid red;
+  display: none;
+  grid-area: menu;
+  height:50vh; //just a mockup height
+  position:absolute;
+  width:100%;
+}
+
+
+#search {
+  scroll-margin-top: 100vh;
+}
+
+/*hide button when JS is not available, hide links when it is*/
+#search[data-js] ~ * .header-search__button--js {
+  display: flex;
+}
+
+#search[data-js] ~ * .header-search__button--link,
+#search:not([data-js]) ~ * .header-search__button--js   {
+  display: none !important;
+}
+
+#search:target,
+#search[data-target='true']  {
+  & ~ * .header-search__menu-dropdown {
+    display:block;
+  }
+}
+
+#search:target {
+  & ~ * .header-search__toggle--close {
+    display:flex;
+  }
+
+  & ~ * .header-search__toggle--open {
+    display:none;
   }
 }
