--- a/src/scss/06_components/pages/_news-page.scss
+++ b/src/scss/06_components/pages/_news-page.scss
@@ -225,7 +225,14 @@ $-card-teaser-min-width: 280px;
   }
 
   .news-listing__title {
-    @include font('special.large_link');
+    @include font('h5');
+
+    // The card style changes already on breakpoint-m so we need to switch to larger
+    // h5-style earlier.
+    @include breakpoint($breakpoint-m) {
+      font-size: remify(20px);
+      line-height: 30 / 20;
+    }
   }
 
   .news-listing__img {
