UHF-6046: Moved search button and added header search templates

--- a/src/scss/06_components/navigation/__index.scss
+++ b/src/scss/06_components/navigation/__index.scss
@@ -2,7 +2,9 @@
 @import 'branding-navigation';
 @import 'breadcrumb';
 @import 'header-bottom-navigation';
+@import 'header-search';
 @import 'header-top-navigation';
+@import 'helfi-search-form';
 @import 'language-switcher';
 @import 'local-tasks';
 @import 'infinite-scroll-pager';
