--- a/templates/navigation/menu--external-menu--fallback.html.twig
+++ b/templates/navigation/menu--external-menu--fallback.html.twig
@@ -69,7 +69,7 @@
           <li{{ item.attributes.addClass(item_classes) }}>
 
             {% set item_title %}
-              <span class="mmenu__link__text"{{ (item.attributes.lang) ? ' lang="' ~ item.attributes.lang ~ '"' : '' }}>{{ item.title }}</span>
+              <span class="mmenu__link__text"{{ (item.attributes.lang) ? ' lang=' ~ item.attributes.lang : '' }}>{{ item.title }}</span>
             {% endset %}
 
             {% if not item.is_nolink %}
