--- a/templates/navigation/menu--mobile.html.twig
+++ b/templates/navigation/menu--mobile.html.twig
@@ -58,7 +58,7 @@
           <li{{ item.attributes.addClass(item_classes) }}>
 
             {% set item_title %}
-              <span class="mmenu__link__text"{{ (item.attributes.lang) ? ' lang="' ~ item.attributes.lang ~ '"' : '' }}>{{ item.title }}</span>
+              <span class="mmenu__link__text"{{ (item.attributes.lang) ? ' lang=' ~ item.attributes.lang : '' }}>{{ item.title }}</span>
             {% endset %}
 
             {% set item_title = item.title %}
