--- a/src/scss/06_components/navigation/_header-top-navigation.scss
+++ b/src/scss/06_components/navigation/_header-top-navigation.scss
@@ -19,7 +19,7 @@ $-header-top-height: calc(#{2 * $-header-top-padding} + #{$-header-top-line-heig
     align-items: center;
     background-color: $color-black-5;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     padding: $-header-top-padding $spacing-double;
   }
 
@@ -31,7 +31,7 @@ $-header-top-height: calc(#{2 * $-header-top-padding} + #{$-header-top-line-heig
   }
 
   .menu__item + .menu__item {
-    margin-left: $spacing;
+    margin-inline-start: $spacing;
   }
 
   .link-to-site-frontpage {
