--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -77,10 +77,6 @@
 
           {{ drupal_entity('block', block__site_branding) }} {# Logo #}
 
-          {{ drupal_entity('block', block__branding_navigation) }} {# Branding menu, aka icon menu #}
-
-          {{ drupal_entity('block', block__external_fallback_menu) }} {# Mobile menu #}
-
           <div class="language-wrapper">
             {{ drupal_entity('block', block__language_switcher) }} {# Change language-menu and content in other languages-menu #}
             <div class="block__headerlanguagelinks">
@@ -88,13 +84,15 @@
               <a href="#" class="headerlanguagelinks__toggle headerlanguagelinks__toggle--close headerlanguagelinks__toggle--link"><span></span></a>
               <button id="js-otherlangs-button" class="headerlanguagelinks__toggle headerlanguagelinks__toggle--js headerlanguagelinks__toggle--open "><span></span></button>
             </div>
-
           </div>
-
-          {{ drupal_entity('block', block__external_header_language_links) }}
+          {{ drupal_entity('block', block__external_header_language_links) }} {# Other languages menu content #}
 
           {# Placeholder for  search menu. desktop and moobile#}
           {% include "@hdbt/component/header-search.twig" %}
+
+          {{ drupal_entity('block', block__branding_navigation) }} {# Branding menu, aka icon menu #}
+
+          {{ drupal_entity('block', block__external_fallback_menu) }} {# Mobile menu #}
 
           {# Render the header branding region without manually rendered blocks #}
           {{ page.header_branding|without([
